Library added: classnames, date-fns, react-datepicker; Components Added: DatePicker,SNB,TopBar,AdManagement,Dashboard; Layout added: MainLayout; Atom added: DateRangeState; Selector added: RefinedDateRangeState; Design: overall layout done, colors·typography added; Assets: icons added; Stylelint rules added;

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,10 @@
+@use './constants/colors';
+
 @import './base/reset';
 @import './base/more';
 @import './base/fonts';
+
+// 기본 폰트 색상
+html {
+  color: colors.$grey-800;
+}
