--- a/src/pages/Dashboard/dashboard.module.scss
+++ b/src/pages/Dashboard/dashboard.module.scss
@@ -1,3 +1,21 @@
-.main {
-  display: block;
+@use 'src/styles/constants/colors';
+@use 'src/styles/mixins/typography';
+
+.dashboard {
+  width: 100%;
+  height: 100%;
+
+  .titleContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
+    padding: 25px 40px;
+
+    .title {
+      color: colors.$grey-800;
+      @include typography.font(26px, 900, 30px);
+    }
+  }
 }
