--- a/src/layouts/mainLayout.module.scss
+++ b/src/layouts/mainLayout.module.scss
@@ -2,8 +2,9 @@
 
 .layout {
   display: flex;
-  width: 1440px;
-  height: 1836px;
+  width: 100%;
+  max-width: 1440px;
+  height: 100%;
   background: colors.$main-bg;
 
   .section {
@@ -12,10 +13,12 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    padding: 0 2.5rem;
 
     .line {
-      width: 1040px;
-      border: 1px solid colors.$grey-50;
+      width: 100%;
+      max-width: 1040px;
+      border: 0.0625rem solid colors.$grey-50;
     }
   }
 }
