--- a/src/pages/Dashboard/dashboard.module.scss
+++ b/src/pages/Dashboard/dashboard.module.scss
@@ -3,19 +3,17 @@
 
 .dashboard {
   width: 100%;
-  height: 100%;
+  height: 109.625rem;
 
   .titleContainer {
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    height: 80px;
-    padding: 25px 40px;
+    height: 5rem;
 
     .title {
-      color: colors.$grey-800;
-      @include typography.font(26px, 900, 30px);
+      @include typography.font(1.625rem, 900, 1.875rem);
     }
   }
 }
