--- a/src/pages/Dashboard/TrendDataBoard/trendDataBoard.module.scss
+++ b/src/pages/Dashboard/TrendDataBoard/trendDataBoard.module.scss
@@ -1,37 +1,37 @@
 .trandDataBoardWrapper {
+  top: 90px;
+  left: 320px;
   box-sizing: border-box;
   width: 1120px;
   height: 743px;
-  left: 320px;
-  top: 90px;
   background: #f6f7f8;
 
   h2 {
     position: absolute;
+    top: 21px;
+    left: 40px;
     width: 97px;
     height: 19px;
-    left: 40px;
-    top: 21px;
-    font-family: 'Roboto';
+    font-family: Roboto;
+    font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
     line-height: 19px;
     color: #3a474e;
   }
 
   .trandDataBoard {
     position: absolute;
-    display: flex;
-    width: 1039px;
-    height: 654px;
-    left: 40px;
     top: 60px;
-    background: #ffffff;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.04);
-    border-radius: 20px;
+    left: 40px;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
+    width: 1039px;
+    height: 654px;
+    background: #ffffff;
+    border-radius: 20px;
+    box-shadow: 0 4px 10px rgb(0 0 0 / 4%);
 
     ul {
       display: flex;
@@ -47,62 +47,53 @@
 }
 
 .dataBox {
+  position: relative;
+  top: 30px;
+  left: 50px;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 18px 40px;
-  margin: 5px;
-
-  position: relative;
   width: 304px;
   height: 79px;
-  left: 50px;
-  top: 30px;
-
+  padding: 18px 40px;
+  margin: 5px;
   background: #ffffff;
-
   border: 0.5px solid #edeff1;
   border-radius: 10px;
 
   .dataTitle {
+    top: 18px;
+    left: 40px;
     width: 35px;
     height: 14px;
-    left: 40px;
-    top: 18px;
-
-    font-family: 'Roboto';
+    font-family: Roboto;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
     line-height: 14px;
-
     color: #94a2ad;
   }
 
   .dataValue {
     margin-top: 10px;
-
-    font-family: 'Roboto';
+    font-family: Roboto;
+    font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    font-size: 16px;
     line-height: 19px;
-
     color: #3a474e;
   }
 
   .transeData {
-    font-family: 'Roboto';
+    flex: none;
+    font-family: Roboto;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
-    font-size: 12px;
     line-height: 14px;
-
     color: #94a2ad;
-
-    flex: none;
   }
 }
