--- a/src/pages/Dashboard/MediaChannel/table.module.scss
+++ b/src/pages/Dashboard/MediaChannel/table.module.scss
@@ -32,6 +32,9 @@
         padding: 0.8125rem 0;
         text-align: right;
 
+        :root[color-theme='dark'] & {
+          color: colors.$grey-100;
+        }
         @include typography.font(0.75rem, 500, 0.875rem);
       }
 
