--- a/src/styles/constants/_colors.scss
+++ b/src/styles/constants/_colors.scss
@@ -16,3 +16,10 @@ $graph-01: #4fadf7;
 $graph-02: #85da45;
 $graph-03: #ac8af8;
 $graph-04: #ffeb00;
+
+$dark-snb-bg: #222;
+$dark-main-bg: rgb(50 50 50);
+$dark-wrap-bg: rgb(80 80 80);
+$dark-secondary-01: #576770;
+$dark-primary: #364293;
+$dark-point: #3a474e;
