--- a/src/components/TopBar/topbar.module.scss
+++ b/src/components/TopBar/topbar.module.scss
@@ -1,3 +1,5 @@
+@use '/src/styles/constants/colors';
+
 .topBar {
   width: 100%;
 
@@ -6,6 +8,14 @@
     align-items: center;
     justify-content: flex-end;
     padding: 1.25rem 2.5rem;
+
+    .theme {
+      padding: 2px;
+      margin-right: 1.875rem;
+      color: colors.$dark-point;
+      border: 2px solid colors.$dark-point;
+      border-radius: 4px;
+    }
 
     .notice {
       position: relative;
