--- a/src/components/common/DatePicker/datePicker.module.scss
+++ b/src/components/common/DatePicker/datePicker.module.scss
@@ -1,4 +1,5 @@
 @use 'src/styles/mixins/typography';
+@use '/src/styles/constants/colors';
 
 .datePicker {
   display: flex;
@@ -18,6 +19,10 @@
         cursor: pointer;
         caret-color: transparent;
 
+        :root[color-theme='dark'] & {
+          color: colors.$grey-300;
+        }
+
         @include typography.font(0.875rem, 500, 1rem);
       }
     }
@@ -35,6 +40,10 @@
       width: 0.75rem;
       height: 0.5rem;
       margin-left: 0;
+
+      :root[color-theme='dark'] & {
+        fill: colors.$grey-300;
+      }
     }
   }
 }
