--- a/src/components/common/Dropdown/dropdown.module.scss
+++ b/src/components/common/Dropdown/dropdown.module.scss
@@ -9,6 +9,14 @@
   .name {
     @include typography.font(1rem, 700, 1.1875rem);
   }
+
+  :root[color-theme='dark'] & {
+    color: colors.$grey-100;
+
+    .icon {
+      fill: colors.$grey-300;
+    }
+  }
 }
 
 .large,
@@ -16,6 +24,16 @@
 .small {
   &.inputContainer {
     background-color: colors.$grey-50;
+  }
+
+  :root[color-theme='dark'] & {
+    &:hover {
+      background: colors.$grey-300;
+
+      .name {
+        color: colors.$dark-primary;
+      }
+    }
   }
 
   &:hover {
