--- a/src/pages/Dashboard/TrendDataBoard/trendDataBoard.module.scss
+++ b/src/pages/Dashboard/TrendDataBoard/trendDataBoard.module.scss
@@ -10,6 +10,9 @@
     padding-bottom: 1.25rem;
     color: colors.$grey-800;
 
+    :root[color-theme='dark'] & {
+      color: colors.$grey-300;
+    }
     @include typography.font(1rem, 700, 1.1875rem);
   }
 
@@ -22,6 +25,10 @@
     background: colors.$white;
     border-radius: 1.25rem;
     box-shadow: 0 0.25rem 0.625rem rgb(0 0 0 / 4%);
+
+    :root[color-theme='dark'] & {
+      background-color: colors.$dark-snb-bg;
+    }
 
     ul {
       display: grid;
@@ -51,6 +58,10 @@
         border: 0.0313rem solid colors.$grey-50;
         border-radius: 0.625rem;
 
+        :root[color-theme='dark'] & {
+          background-color: colors.$grey-300;
+          border: 0.0313rem solid colors.$grey-100;
+        }
         @include responsive.breakpoint('lg') {
           padding: 1rem 2rem;
         }
@@ -59,6 +70,10 @@
           color: colors.$grey-300;
 
           @include typography.font(0.75rem, 500, 0.875rem);
+
+          :root[color-theme='dark'] & {
+            color: colors.$grey-50;
+          }
         }
 
         .dataValue {
@@ -72,6 +87,9 @@
           flex: none;
           color: colors.$grey-300;
 
+          :root[color-theme='dark'] & {
+            color: colors.$grey-50;
+          }
           @include typography.font(0.75rem, 500, 0.875rem);
         }
       }
