--- a/src/pages/Dashboard/TrendDataBoard/trendDataBoard.module.scss
+++ b/src/pages/Dashboard/TrendDataBoard/trendDataBoard.module.scss
@@ -18,19 +18,17 @@
     flex-direction: column;
     justify-content: space-around;
     width: 100%;
-    height: 40.875rem;
     background: colors.$white;
     border-radius: 1.25rem;
     box-shadow: 0 0.25rem 0.625rem rgb(0 0 0 / 4%);
 
-    ul {
+    .dataBoxContainer {
       display: grid;
       flex-wrap: wrap;
       grid-template-columns: repeat(3, 1fr);
       gap: 1.375rem;
       height: 50%;
       padding: 2.5rem 2.5rem 0;
-      overflow: auto;
 
       @include responsive.breakpoint('lg') {
         grid-template-columns: repeat(2, 1fr);
@@ -75,6 +73,18 @@
           @include typography.font(0.75rem, 500, 0.875rem);
         }
       }
+    }
+  }
+
+  .dropdowns {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 2.5rem 0;
+
+    .categories {
+      display: flex;
+      gap: 0.625rem;
     }
   }
 }
