--- a/src/layouts/mainLayout.module.scss
+++ b/src/layouts/mainLayout.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   width: 100%;
   max-width: 1440px;
-  height: 100%;
+  min-height: 100vh;
   background: colors.$main-bg;
 
   :root[color-theme='dark'] & {
